Thu Mar 30 20:16:08 2006  Tim Janik  <timj@gtk.org>

	* acbeast.m4: add -Wno-pointer-sign when comiling mit gcc-4.2 to omit
	bogus warnings about signedness of string pointers in C.

	* autogen.sh: permit compilatiopn with automake 1.9.

	* birnet/birnetring.c: fixed bogus "const" in return type.

	* birnet/birnetthread.c: fixed strict aliasing warning.

	* **/Makefile.am: fixed automake "+=" warnings.

Wed Mar 29 01:54:38 2006  Tim Janik  <timj@gtk.org>

	* web/wiki.doxi: PHP fixups to tell robots: content="noindex" for
	tmeporary EditThisPage wiki pages.

	* web/style/beast-style.css: beautify wiki tables somewhat.

Thu Mar 23 02:02:50 2006  Tim Janik  <timj@gtk.org>

	* web/Makefile.am: dependency fixup.

Tue Mar 21 00:55:27 2006  Tim Janik  <timj@gtk.org>

	* docs/Makefile.am:
	* web/Makefile.am:
	* web/webmenu.doxi: generate documentation for birnet/.

Sun Mar 12 12:21:40 2006  Tim Janik  <timj@gtk.org>

	* Makefile.decl: declare variables that are used in += statements.

	* */Makefile.am: added include statement for Makefile.decl.

Sat Mar 11 20:23:51 2006  Tim Janik  <timj@gtk.org>

	* */Makefile.am: 
	added missing copyright notices. 
	changed/added LGPL license with permission
	from Stefan Westerfeld (required for some files).

Fri Mar 10 21:48:03 2006  Tim Janik  <timj@gtk.org>

	* web/download.doxi: added freebsd, arch and gentoo package links.

	* web/htaccess.in: more screenshot redirections.

	* web/related-links.doxi: link updates.

Fri Mar 10 19:49:56 2006  Tim Janik  <timj@gtk.org>

	* web/*.php: license fixups.
	
	* web/htaccess.in: redirect old screenshot links.

Fri Mar 10 19:25:50 2006  Tim Janik  <timj@gtk.org>

	* web/robots.txt: disallow temporary wiki pages and the sandbox.

Fri Mar 10 18:06:26 2006  Tim Janik  <timj@gtk.org>

	* web/Makefile.am: install robots.txt and favicon.ico.

	* web/robots.txt: new file to avoid constant web server errors.
	allow access to everything for all spiders by default.
