@@ -227,7 +227,8 @@ AC_DEFUN([MC_PROG_CC_WITH_CFLAGS], [
 		    MC_EVAR_ADD(CFLAGS, -pedantic, -pedantic)
 		)
 		dnl avoid lots of bogus warnings with string pointers
-		MC_EVAR_ADD(CFLAGS, -Wno-pointer-sign, -Wno-pointer-sign)
+		MC_PROG_CC_SUPPORTS_OPTION(-Wno-pointer-sign,
+		  MC_EVAR_ADD(CFLAGS, -Wno-pointer-sign, -Wno-pointer-sign))
 		dnl problematic, triggers warnings in glibc headers
 		MC_EVAR_ADD(CFLAGS, -Wpointer-arith, -Wpointer-arith)
 		dnl problematic, warns on prototype arguments:
