@@ -5,8 +5,8 @@ PROJECT=BEAST
 TEST_TYPE=-d
 FILE=bse
 AUTOMAKE=automake
-AUTOMAKE_POSTFIX=1.4
-AUTOMAKE_VERSION=1.4
+AUTOMAKE_POSTFIX=1.9
+AUTOMAKE_VERSION=1.9
 AUTOMAKE_MAXVERSION=1.9
 ACLOCAL=aclocal
 AUTOCONF=autoconf
