@@ -1,3 +1,9 @@
+Thu Mar 30 20:49:43 2006  Tim Janik  <timj@gtk.org>
+
+	* autogen.sh: depend on automake-1.9.
+
+	* acbeast.m4: check for -Wno-pointer-sign support before using it.
+
 Thu Mar 30 20:16:08 2006  Tim Janik  <timj@gtk.org>
 
 	* acbeast.m4: add -Wno-pointer-sign when comiling mit gcc-4.2 to omit
